# denser-chat

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
denser_chat/: build.py  demo.py  docker-compose.yml  indexer.py  processor.py
